--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     body {
       background: linear-gradient(145deg, rgb(9, 23, 33) 0%, rgb(24, 29, 57) 50%, rgb(6, 10, 52) 100%);
       font-family: Arial, sans-serif;
-      color: lightblue; /* fixed from "light blue" */
+      color: lightblue;
       transition: background 1s ease-in-out;
     }
 
